--- a/src/app/pages/organization/employees/templates/personal/personal-view.html
+++ b/src/app/pages/organization/employees/templates/personal/personal-view.html
@@ -6,7 +6,8 @@
         reset-form="empTabCtrl.resetFormCommon()"
         open-List="empTabCtrl.goToEmployeeList()"
         clear-form="empTabCtrl.clearFormCommon()"
-        condition="true">
+        condition="true"
+        show-close="true">
         </edit-panel-head>
 
         <div class="panel-body" style="padding:5px" ng-scrollbars ng-scrollbars-config="config">
