--- a/src/app/pages/organization/employees/templates/address/address-view.html
+++ b/src/app/pages/organization/employees/templates/address/address-view.html
@@ -1,13 +1,10 @@
 <form ng-submit="empTabCtrl.saveFormCommon(editForm)" name="editForm" novalidate>
     <div class="panel panel-default xmedium-panel">
-        <edit-panel-head page="page" 
-        page-title="page.pageinfo.title" 
-        show-save="editForm.untouch" 
-        reset-form="empTabCtrl.resetFormCommon()"
-        open-List="empTabCtrl.goToEmployeeList()"
-        clear-form="empTabCtrl.clearFormCommon()"
-        condition="true">
-        </edit-panel-head>
+         <edit-panel-head   page="page" page-title="page.pageinfo.title" reset-form="empTabCtrl.resetFormCommon(editForm)"
+     open-List="empTabCtrl.goToEmployeeList()"
+     clear-form="empTabCtrl.clearFormCommon(editForm)"
+    condition="true"
+    show-close="true"></edit-panel-head>
 
         <div class="panel-body" style="padding:5px" ng-scrollbars ng-scrollbars-config="config">
            <div style="max-height: 420px" ng-scrollbars ng-scrollbars-config="config">
