leave and loan NM

--- a/src/app/pages/leave/masters/list/mastersList.html
+++ b/src/app/pages/leave/masters/list/mastersList.html
@@ -197,12 +197,12 @@
                 
                 <div ng-if="entity.LCRTreatAs" class="form-group col-md-3">
                     <label for="inputPassword3">{{page.pageinfo.fields.LCRIsTreatAsAbsent.text}}</label>
-                    <input type="radio" name="commonRedioForPresentOrAbsent" ng-model="entity.LCRIsTreatAsAbsent" value="absentD">
+                    <input type="radio" name="commonRedioForPresentOrAbsent" ng-model="entity.LCRIsTreatAsAbsent">
                     <!--<field-box page="page" ng-column="page.pageinfo.fields.LCRIsTreatAsAbsent" ng-entity="entity" form="editForm"></field-box>-->
                 </div>
                 <div ng-if="entity.LCRTreatAs" class="form-group col-md-3">
                     <label for="inputPassword3">{{page.pageinfo.fields.LTRIsPresentDays.text}}</label>
-                    <input type="radio" name="commonRedioForPresentOrAbsent" ng-model="entity.LTRIsPresentDays" value="presentD">
+                    <input type="radio" name="commonRedioForPresentOrAbsent" ng-model="entity.LTRIsPresentDays">
                     <!--<field-box page="page" ng-column="page.pageinfo.fields.LTRIsPresentDays" ng-entity="entity" form="editForm"></field-box>-->
                 </div>
                
