--- a/src/app/common/components/filterBox/filterBox.html
+++ b/src/app/common/components/filterBox/filterBox.html
@@ -135,7 +135,7 @@
                 </div>
             </li>
         </ul>
-        <div class="nav">
+        <div class="nav" ng-show="page.boxOptions.showApplyFilter">
             <button type="button" class="btn btn-info" ng-click="applyBoxFilter()">Apply Filter</button>
             <a href ng-click="clearFilter()">Clear</a>
         </div>
