--- a/src/app/pages/leave/transaction/leavestatement/leave.leavestatement.html
+++ b/src/app/pages/leave/transaction/leavestatement/leave.leavestatement.html
@@ -21,12 +21,17 @@
             </div>
             
 
-            <div class="row">
-               
-                <div class="form-group col-md-3 ">
+              <div class="row">
+                <div class="form-group col-md-2 ">
+                    <label for="inputPassword3 ">{{page.pageinfo.fields.ELTLCRId.text}}</label>
+                </div>
+                <div class="form-group col-md-4 ">
+                    <field-box page="page" ng-column="page.pageinfo.fields.ELTLCRId " ng-entity="entity " form="editForm "></field-box>
+                </div>
+                <!--<div class="form-group col-md-3 ">
                 </div>
                 <div class="form-group col-md-3 ">
-                </div>
+                </div>-->
             </div>
 
             <div class="row ">
