epm validate:dj

--- a/src/app/pages/organization/employees/templates/job/job-view.html
+++ b/src/app/pages/organization/employees/templates/job/job-view.html
@@ -10,7 +10,7 @@
       show-close="true"
       ></edit-panel-head>
     <div class="panel-body" style="padding:5px;" ng-scrollbars ng-scrollbars-config="config">
-      <div style="min-height: 450px;">
+      <div style="min-height: 450px;" ng-show="page.pageIsLoaded">
         <div class="row">
 
           <div class="col-sm-4">
