--- a/src/app/common/components/fieldBox/fieldBox.html
+++ b/src/app/common/components/fieldBox/fieldBox.html
@@ -1,7 +1,7 @@
-<div ng-show="!page.isAllowEdit" class="form-group">
+<div ng-hide="page.isAllowEdit" class="form-group">
     <div ng-switch="col.type">
-        <select ng-disabled="true" ng-switch-when="select|strapselect|uiselect" ng-switch-when-separator="|" ng-model="entity[col.name]" class="form-control input-disabled hideIcon"
-            ng-options="opt.value as opt.name for opt in col.options"></select>
+        <select ng-disabled="true" ng-switch-when="select|strapselect|uiselect" ng-switch-when-separator="|" ng-model="entity[col.name]"
+            class="form-control input-disabled hideIcon" ng-options="opt.value as opt.name for opt in col.options"></select>
 
         <div ng-switch-when="checkbox">
             <label class="checkbox-inline custom-checkbox nowrap">
@@ -12,8 +12,12 @@
         <span ng-switch-default class="form-control">{{entity[col.name]}}</span>
     </div>
 </div>
-<div ng-show="page.isAllowEdit" popover-animation="true" uib-popover-html="col.errorText" popover-trigger="manual" popover-is-open="col.showError"
-    popover-placement="right" ng-switch="col.type" class="form-group  has-feedback" ng-class="{'has-success':hasSuccess(),'has-error':hasError(),'has-warning':hasWarning(), 'has-error':hasSubmitRequired()}">
+<div ng-show="page.isAllowEdit" 
+    popover-animation="true" uib-popover-html="col.errorText" popover-trigger="manual" 
+    popover-is-open="col.showError"
+    popover-placement="right" ng-switch="col.type" class="form-group  has-feedback" 
+    ng-class="{'has-success': !editForm[col.name].$isEmpty(editForm[col.name]['$modelValue']) && (editForm[col.name]['$valid'] && editForm[col.name]['$dirty']),
+        'has-error': editForm[col.name].$isEmpty(editForm[col.name]['$modelValue']) && (editForm[col.name]['$invalid'] && !editForm[col.name]['$pristine'])}">
     <div class="input-group">
         <!--Textbox-->
         <!--<span class="input-group-addon  addon-left" ng-show="col.required">
@@ -59,6 +63,9 @@
                 </span>
                 <input valid-text ng-column="col" name="{{col.name}}" id="{{col.name}}" ng-readonly="true" class="form-control" placeholder="Select a date"
                     ng-model="entity[col.name]" ng-model-options="{ updateOn: 'blur' }">
+                <span class="input-group-btn">
+                    <button class="btn btn-secondary" ng-click="entity[col.name]=''" type="button"><i class="fa fa-close"></i></button>
+                </span>
             </div>
 
         </div>
@@ -172,60 +179,21 @@
         aria-hidden="true"></i>-->
 
     <i ng-class="{'form-control-feedback': true, 
-            'ion-checkmark-circled': hasSuccess(), 
-            'ion-android-cancel': hasError(), 
-            'ion-ios-medical font-red': hasRequired(), 
+            'ion-checkmark-circled': !editForm[col.name].$isEmpty(editForm[col.name]['$modelValue']) && (editForm[col.name]['$valid'] && editForm[col.name]['$dirty']), 
+            'ion-android-cancel':  !editForm[col.name].$isEmpty(editForm[col.name]['$modelValue']) &&  (editForm[col.name]['$invalid'] && !editForm[col.name]['$pristine']), 
+            'ion-ios-medical font-red': (col.required && !(editForm[col.name]['$valid'] && editForm[col.name]['$dirty']) && !(editForm[col.name]['$invalid'] && !editForm[col.name]['$pristine'])), 
             'ion-alert-circled': hasWarning(), 
             }">
 
     </i>
-
-    <!--{{hasRequired()}}-->
     <!--info area-->
     <!--<span id="inputGroupSuccess1Status" class="sr-only">(success)</span>-->
     <!--<span ng-show="editForm[col.name]['$error']['blacklist']">
           The phrase "{{entity[col.name]}}" is blacklisted</span>
     <span  ng-show="editForm[col.name]['$error']['required']">required</span>-->
     <span ng-show="editForm['$submitted'] && editForm[col.name]['$error']['required']" class="help-block" for="col.name">{{col.text}} is required</span>
-    <span ng-show="editForm['$submitted'] && ngModel.$error.emailError" class="help-block" for="col.name">{{col.text}} is not valid</span>
-    <span ng-show="editForm['$submitted'] && ngModel.$error.pincode" class="help-block" for="col.name">{{col.text}} must be 6 digit long</span>
-    <span ng-show="editForm['$submitted'] && ngModel.$error.zipcode" class="help-block" for="col.name">{{col.text}} must be 5 digit long</span>
-    <span ng-show="editForm['$submitted'] && ngModel.$error.aadhar" class="help-block" for="col.name">{{col.format}}</span>
+    <span ng-show="editForm['$submitted'] && editForm[col.name]['$error']['emailError']" class="help-block" for="col.name">{{col.text}} is not valid</span>
+    <span ng-show="editForm['$submitted'] && editForm[col.name]['$error']['pincode']" class="help-block" for="col.name">{{col.text}} must be 6 digit long</span>
+    <span ng-show="editForm['$submitted'] && editForm[col.name]['$error']['zipcode']" class="help-block" for="col.name">{{col.text}} must be 5 digit long</span>
+    <span ng-show="editForm['$submitted'] && editForm[col.name]['$error']['aadhar']" class="help-block" for="col.name">{{col.format}}</span>
 </div>
-<!--<style>
-    
-    input:-moz-read-only {
-        /* For Firefox */
-        background-color: white!important;
-        color: black!important;
-        cursor: pointer;
-    }
-
-    input:read-only {
-        background-color: white!important;
-        color: black!important;
-        cursor: pointer;
-    }
-
-    .popover {
-        width: 300px;
-        height: auto!important;
-        max-height: 300px;
-    }
-
-    .has-warning .help-block,
-    .has-error .help-block,
-    .help-block {
-        color: red;
-        font-size: 11px;
-        font-family: Arial, Helvetica, sans-serif;
-        display: block;
-        text-align: left;
-        margin: 0px;
-        padding: 0px;
-    }
-
-    .input-group {
-        margin-bottom: 0px;
-    }
-</style>-->
