--- a/src/app/pages/loan/transaction/loanapplication/loan.loanapplication.html
+++ b/src/app/pages/loan/transaction/loanapplication/loan.loanapplication.html
@@ -62,7 +62,8 @@
             <div class="row">
                 <div class="form-group col-md-4">
                     <label for="inputPassword3">{{page.pageinfo.fields.LALoanInstallmetDate.text}}</label>
-                    <field-box page="page" ng-column="page.pageinfo.fields.LALoanInstallmetDate" ng-entity="entity" form="editForm"></field-box>
+                    <field-box page="page" ng-column="page.pageinfo.fields.LALoanInstallmetDate" ng-entity="entity" fb-change="onChangeInstallmentDate()"
+                        form="editForm"></field-box>
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputPassword3">{{page.pageinfo.fields.LALastLoanCheckDate.text}}</label>
