--- a/src/app/pages/attendance/transaction/outdoorapply/attendance.outdoorapply.html
+++ b/src/app/pages/attendance/transaction/outdoorapply/attendance.outdoorapply.html
@@ -1,75 +1,83 @@
-<grid-box ng-model="page" ng-hide="showEditForm" >
+<grid-box ng-model="page" ng-hide="showEditForm">
 </grid-box>
-<!--<form name="editForm" novalidate ng-submit="saveForm(editForm)" ng-show="showEditForm" >
+<form  name="editForm" novalidate ng-submit="updateForm(entity)" ng-show="showEditForm">
     <div class="panel panel-default xmedium-panel">
-        <edit-panel-head page-title="page.pageinfo.title" reset-form="resetFormCommon(editForm)" clear-form="clearFormCommon(editForm)"
-            close-form="closeForm(editForm)" show-close="true" show-save="true" show-clear="true" show-list="false" show-reset="true"
-            condition="true"></edit-panel-head>
+        <edit-panel-head  page="page" page-title="page.pageinfo.title" close-form=" closeForm(editForm)" show-close="true"></edit-panel-head>
 
-           <div class="panel-body" style="padding:5px" ng-scrollbars ng-scrollbars-config="config">
+        <div class="panel-body text-centre" style="padding:5px " ng-scrollbars ng-scrollbars-config="config ">
 
+            <div class="row ">
+                <div class="form-group col-md-8 ">
+                    <label class="col-md-2">{{page.pageinfo.fields.FADEmpId.text}}</label>
+                    <div class="col-md-6">
+                        <field-box page="page" ng-column="page.pageinfo.fields.FADEmpId " ng-entity="entity " form="editForm "></field-box>
+                    </div>
+                </div>
+
+            </div>
 
             <div class="row">
-                <div class="form-group col-md-3">
-                    <label for="inputPassword3">{{page.pageinfo.fields.FADEmpId.text}}</label>
-                    <field-box ng-column="page.pageinfo.fields.FADEmpId" ng-entity="entity" form="editForm"></field-box>
+                <div class="form-group col-md-8 ">
+                    <label class="col-md-2">{{page.pageinfo.fields.FDAFromDate.text}}</label>
+                    <div class="col-md-6">
+                        <field-box page="page" ng-column="page.pageinfo.fields.FDAFromDate " ng-entity="entity " form="editForm "></field-box>
+                    </div>
                 </div>
-                <div class="form-group col-md-3">
-                </div>
-                 <div class="form-group col-md-3">
-                 </div>
-                  <div class="form-group col-md-3">
-                 </div>
-              
             </div>
-
-             <div class="row">
-                <div class="form-group col-md-3">
-                    <label for="inputPassword3">{{page.pageinfo.fields.FDAFromDate.text}}</label>
-                    <field-box ng-column="page.pageinfo.fields.FDAFromDate" ng-entity="entity" form="editForm"></field-box>
-                </div>
-                <div class="form-group col-md-3">
-                    <label for="inputPassword3">{{page.pageinfo.fields.FDAToDate.text}}</label>
-                    <field-box ng-column="page.pageinfo.fields.FDAToDate" ng-entity="entity" form="editForm"></field-box>
-                </div>
-                 <div class="form-group col-md-3">
-                 </div>
-                  <div class="form-group col-md-3">
-                 </div>
-               
-            </div>
-
-
-             <div class="row">
-                <div class="form-group col-md-3">
-                    <label for="inputPassword3">{{page.pageinfo.fields.FADInTime.text}}</label>
-                    <field-box ng-column="page.pageinfo.fields.FADInTime" ng-entity="entity" form="editForm"></field-box>
-                </div>
-                <div class="form-group col-md-3">
-                    <label for="inputPassword3">{{page.pageinfo.fields.FDAOutTime.text}}</label>
-                    <field-box ng-column="page.pageinfo.fields.FDAOutTime" ng-entity="entity" form="editForm"></field-box>
-                </div>
-                 <div class="form-group col-md-3">
-                 </div>
-                  <div class="form-group col-md-3">
-                 </div>
-               
-            </div>
-
-
             <div class="row">
-                <div class="form-group col-md-3">
-                    <label for="inputPassword3">{{page.pageinfo.fields.FDARemark.text}}</label>
-                    <field-box ng-column="page.pageinfo.fields.FDARemark" ng-entity="entity" form="editForm"></field-box>
+                <div class="form-group col-md-8 ">
+                    <label class="col-md-2">{{page.pageinfo.fields.FDAToDate.text}}</label>
+                    <div class="col-md-6">
+                        <field-box page="page" ng-column="page.pageinfo.fields.FDAToDate " ng-entity="entity " form="editForm "></field-box>
+                    </div>
                 </div>
-                <div class="form-group col-md-3">
-                 </div>
-                  <div class="form-group col-md-3">
-                 </div>
-                  <div class="form-group col-md-3">
-                 </div>
-               
             </div>
 
 
-</form>-->
+            <div class="row ">
+                <div class="form-group col-md-8 ">
+                    <label class=" col-md-2">{{page.pageinfo.fields.FADInTime.text}}</label>
+                    <div class=" col-md-6">
+                        <field-box page="page" ng-column="page.pageinfo.fields.FADInTime " ng-entity="entity " form="editForm "></field-box>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row ">
+                <div class="form-group col-md-8 ">
+                    <label class="col-md-2">{{page.pageinfo.fields.FDAOutTime.text}}</label>
+                    <div class="col-md-6">
+                        <field-box page="page" ng-column="page.pageinfo.fields.FDAOutTime " ng-entity="entity " form="editForm "></field-box>
+                    </div>
+                </div>
+            </div>
+            <div class="row ">
+                <div class="form-group col-md-8">
+                    <label class="col-md-2">{{page.pageinfo.fields.FDARemark.text}}</label>
+                    <div class="col-md-6">
+                        <field-box page="page" ng-column="page.pageinfo.fields.FDARemark " ng-entity="entity " form="editForm "></field-box>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-8">                 
+                    <label class="col-md-2">Status</label>
+                    <div class="col-md-2" >
+                       <select class="form-control" ng-options="status.value as status.name for status in page.pageinfo.statuslist" ng-model="entity.StatusId" name="editForm"></select>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group col-md-8">
+                <div class="col-md-2"></div>
+                <div class="">
+                    <button type="submit" class="btn btn-primary">Update</button>               
+                    <button type="button" class="btn btn-danger" ng-click="close()">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+</form>
